deploy/k8s/overlays/production/patches/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermes-admin
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermes-router
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermes-inbox
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermes-user
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermes-worker-events
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermes-worker-email
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermes-worker-sms
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermes-worker-inbox
spec:
  replicas: 2
